<resources>
    <string name="app_name">WhatsAround</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="LoginUser">USER_ID</string>
    <string name="ms1">No account yet? Create one</string>
    <string name="name">Name</string>
    <string name="CA">Create Account</string>
    <string name="AML">Already a member? Login</string>
    <string name="user">I am a Customer</string>
    <string name="partner">I am a service provider</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Bottom Navigation Related -->
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_Search">Search</string>
    <string name="title_booking">My Bookings</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="title_Quotes">Quotes</string>
    <string name="title_Ongoing">Ongoing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="title_activity_partner_home">PartnerHome</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="your_locality">YOUR LOCALITY</string>
    <string name="enter_location">Lahore</string>
    <string name="service_information">Service Information</string>
    <string name="details">Details</string>
    <string name="title">Title</string>
    <string name="service_location">Location</string>
    <string name="_4">4</string>
    <string name="_999_00">999.00</string>
    <string name="quote_name">Quote Name</string>
    <string name="quote_category">Quote Category</string>
    <string name="add_quote">Add Quote</string>
    <string name="price">Price</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="quote_detail">Quote Detail</string>
    <string name="quote_ID">quote Id</string>
    <string name="my_quotes">My Quotes</string>
    <string name="quotes">Quotes</string>
    <string name="book_service">Book Service</string>
    <string name="offered_by">Offered by</string>
    <string name="partner_name">Partner Name</string>
    <string name="partner_location">Partner Location</string>
    <string name="rating">Rating</string>
    <string name="location">Location</string>
    <string name="call_provider">Call Provider</string>
    <string name="service">Service</string>
    <string name="category_name">Category Name</string>
    <string name="category">Category</string>
    <string name="book_now">Book Now!</string>
    <string name="description">Description</string>
    <string name="pkr">PKR</string>
    <string name="rs">Rs.</string>
    <string name="service_name">Service Name</string>
    <string name="todo">TODO</string>
    <string name="status">Status</string>
    <string name="booking_id">Booking id: </string>
    <string name="cnic_number">Cnic Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="occupation">Occupation</string>
    <string name="service_category">Service Category</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
</resources>
