<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/toolbar_Book_Service"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:background="#000"
        tools:ignore="NamespaceTypo">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toolbar_Book_Service"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:text="@string/book_service"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:id="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar_Book_Service"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:text="@string/offered_by"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Partner_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view1"
        android:layout_alignEnd="@+id/CALL_BUTTON"
        android:layout_marginEnd="24dp"
        android:text="@string/partner_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:layout_alignEnd="@+id/Partner_Location"
        android:layout_below="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignTop="@+id/ratingBar2"
        android:text="@string/rating"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/view1"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        android:numStars="4"
        android:rating="4" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="12dp"
        android:id="@+id/view3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Partner_Location"
        android:layout_alignBottom="@+id/Partner_Location"
        android:layout_alignStart="@+id/textView4"
        android:text="@string/location"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Partner_Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Partner_Name"
        android:layout_below="@+id/ratingBar2"
        android:text="@string/partner_location"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="11dp"
        android:id="@+id/view4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/view4"
        android:text="@string/call_provider"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/CALL_BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view4"
        android:layout_toEndOf="@+id/textView2"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_call_black_24dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_4"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/CALL_BUTTON"
        android:id="@+id/view5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/view5"
        android:text="@string/service"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Service_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Partner_Name"
        android:layout_below="@+id/view5"
        android:text="@string/service_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView10"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="11dp"
        android:text="@string/category"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignStart="@+id/Service_Name"
        android:text="@string/category_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="13dp"
        android:text="Rs."
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView15"
        android:layout_alignBottom="@+id/textView15"
        android:layout_alignStart="@+id/Partner_Location"
        android:text="@string/pkr"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="75sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="61dp"
        android:padding="@dimen/margin_4"
        android:text="description"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

    <Button
        android:id="@+id/book_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:theme="@style/MyButton"
        android:textColor="@color/colorPrimary"
        android:layout_toEndOf="@+id/textView4"
        android:gravity="center"
        android:text="@string/book_now" />


</RelativeLayout>
</ScrollView>