<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:background="#ffff"
    android:id="@+id/search_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/quote_Id"
            android:layout_width="112dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/quote_ID"
            android:textColor="#000"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/quote_name"
            android:layout_width="112dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/img_quote"
            android:text="@string/quote_name"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quote_location"
            android:layout_width="112dp"
            android:layout_height="20dp"
            android:layout_alignStart="@+id/quote_name"
            android:layout_centerVertical="true"
            android:text="@string/service_location"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quote_category"
            android:layout_width="112dp"
            android:layout_height="20dp"
            android:layout_above="@+id/view2"
            android:layout_alignStart="@+id/quote_location"
            android:text="@string/quote_category"
            android:textColor="#000"
            android:textStyle="bold" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@android:color/darker_gray"
            android:foregroundGravity="bottom" />

        <TextView
            android:id="@+id/quote_price"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_above="@+id/view2"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="15dp"
            android:padding="@dimen/margin_4"
            android:text="@string/_999_00"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/img_quote"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/todo"
            android:padding="2dp"
            android:src="@mipmap/ic_launcher_round"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </RelativeLayout>


</RelativeLayout>